feat(api): [sc-2909] add common responses in all openapi specs
